Revision history for XML::Genx.

0.10  Thu Feb 17 20:40:03 GMT 2005
	- Implement StartDocString() for the common case of outputting
          to a string.

0.09  Tue Dec 14 22:51:25 GMT 2004
	- Ensure that we take a reference to the filehandle being
	  passed in to StartDocFile() so that it doesn't get closed
	  behind our backs.

0.08  Sat Dec  4 22:52:56 GMT 2004
	- Implement XML::Genx::Constants.
	- Make the thrown exceptionn be a dual valued scalar.
	- Cleanup declared attributes in XML::Genx::Simple.

0.07  Sat Dec  4 19:19:59 GMT 2004
	- Add XML::Genx::Simple.
	- Make Declare*() die as well.
	- Make the sub-objects die correctly as well.

0.06  Fri Dec  3 14:10:35 GMT 2004
	- On Windows, require the next version of Module::Build, which
	  has a bug fix that we need in it.  Unfortunately, that means
	  that we won't be available on Windows until that's released.
	- Make a missing or undef prefix argument mean auto-create a
	  prefix instead.
	- Add missing AddNamespace() on to namespace object.

0.05  Thu Dec  2 01:13:22 GMT 2004
	- Fix the tests on systems where we get back a filehandle with
	  an invalid file descriptor instead of NULL from the T_STDIO input
	  typemap.

0.04  Tue Nov 30 23:14:44 GMT 2004
	- Added example directory, and small demo script.
	- Make namespace optional on Declare{Element,Attribute}().
	- Fix up the docs to mention AddAttributeLiteral().
	- Make the namespace parameter in StartElementLiteral()
	  optional.  Ditto for AddAttributeLiteral().

0.03  Tue Nov 30 13:44:28 GMT 2004
	- Everything now dies by default instead of returning a status
          code.

0.02  Tue Nov 30 08:49:13 GMT 2004
	- Added StartDocSender(), so you don't always have to output
	  to a filehandle.
	- Fixed compilation warnings about "cast to pointer from
	  integer of different size".

0.01  Sat Nov 27 09:03:47 GMT 2004
	- Original version.